# CustomMalloc

./: CMakeLists.txt
include/: malloc.hpp
src/: entry.cpp  malloc.cpp
test/: CMakeLists.txt  test_memory.cpp
